--- a/lesson-21/scss/_fonts.scss
+++ b/lesson-21/scss/_fonts.scss
@@ -1,2 +1,77 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+//---------------Manual--------------------
+//---------------Causten-------------------
+@font-face {
+  font-family: 'Causten';
+  src: url("../fonts/Causten-Light.woff2") format("woff2"),
+  url("../fonts/Causten-Light.woff") format("woff");
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Causten';
+  src: url("../fonts/Causten-Regular.woff2") format("woff2"),
+  url("../fonts/Causten-Regular.woff") format("woff");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Causten';
+  src: url("../fonts/Causten-Medium.woff2") format("woff2"),
+  url("../fonts/Causten-Medium.woff") format("woff");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Causten';
+  src: url("../fonts/Causten-Semi-Bold.woff2") format("woff2"),
+  url("../fonts/Causten-Semi-Bold.woff") format("woff");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Causten';
+  src: url("../fonts/Causten-Bold.woff2") format("woff2"),
+  url("../fonts/Causten-Bold.woff") format("woff");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+
+//-----------------CoreSansC-------------
+
+@font-face {
+  font-family: 'Core Sans C';
+  src: url("../fonts/CoreSansC-55Medium.woff2") format("woff2"),
+  url("../fonts/CoreSansC-55Medium.woff") format("woff");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Core Sans C';
+  src: url("../fonts/CoreSansC-65Bold.woff2") format("woff2"),
+  url("../fonts/CoreSansC-65Bold.woff") format("woff");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Core Sans C';
+  src: url("../fonts/CoreSansC-85Heavy.woff2") format("woff2"),
+  url("../fonts/CoreSansC-55Medium.woff") format("woff");
+  font-weight: 800;
+  font-display: swap;
+  font-style: normal;
+}
