--- a/lesson-21/scss/style.scss
+++ b/lesson-21/scss/style.scss
@@ -266,7 +266,7 @@ body {
   &__link {
     display: inline-block;
     color: #807D7E;
-    font-family: $main-font-size;
+    font-family: $main-font;
     font-size: 22px;
     font-weight: 500;
     transition: $main-transition;
@@ -658,7 +658,7 @@ body {
   }
 
   p {
-    font-family: $main-font-size;
+    font-family: $main-font;
     font-size: 20px;
     font-weight: 300;
     letter-spacing: 1px;
