--- a/lesson-21/scss/style.css
+++ b/lesson-21/scss/style.css
@@ -304,6 +304,7 @@ body {
 .menu__list {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   column-gap: 38px;
   row-gap: 12px;
 }
