--- a/lesson-21/scss/style.scss
+++ b/lesson-21/scss/style.scss
@@ -95,7 +95,7 @@ body {
 
     @media (max-width: 1021.98px) {
       min-height: 60px;
-      gap: 24px;
+      gap: 18px;
     }
 
     @media (max-width: 457.98px) {
@@ -126,10 +126,13 @@ body {
 
   // .header__form
   &__form {
-    flex-grow: 1;
     position: relative;
     z-index: 10;
     display: flex;
+
+    @media (max-width: $tablet-breakpoint) {
+      flex-grow: 1;
+    }
 
     @media (max-width: $second-mobile-breakpoint) {
       flex-grow: 0;
@@ -242,13 +245,13 @@ body {
   // .menu__list
   &__list {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    column-gap: 38px;
+    column-gap: 35px;
     row-gap: 12px;
 
     @media (max-width: 1167.98px) {
-      column-gap: 22px;
+      column-gap: 18px;
     }
 
     @media (max-width: $tablet-breakpoint) {
@@ -307,6 +310,10 @@ body {
     padding: 12px 20px 12px 40px;
     border-radius: 8px;
     background: $header-background;
+
+    @media (max-width: 1056.98px) {
+      max-width: 200px;
+    }
 
     @media (max-width: $tablet-breakpoint) {
       max-width: $full-percentage;
